--- a/NebulaAcademyHome/src/components/Global/NavigationBar.css
+++ b/NebulaAcademyHome/src/components/Global/NavigationBar.css
@@ -7,7 +7,7 @@
     position: sticky;
     top: 0px;
     width: 100%;
-    z-index: 10;
+    z-index: 100;
 }
 .navbar-collapse{
     flex-basis: 100%;
